destroy REST API specification
