# rest/restapi/operations/destroy_parameters.go
@@ -1,0 +1,97 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime"
+	"github.com/go-openapi/runtime/middleware"
+	"github.com/go-openapi/swag"
+
+	strfmt "github.com/go-openapi/strfmt"
+)
+
+// NewDestroyParams creates a new DestroyParams object
+// with the default values initialized.
+func NewDestroyParams() DestroyParams {
+	var ()
+	return DestroyParams{}
+}
+
+// DestroyParams contains all the bound params for the destroy operation
+// typically these are obtained from a http.Request
+//
+// swagger:parameters destroy
+type DestroyParams struct {
+
+	// HTTP Request Object
+	HTTPRequest *http.Request `json:"-"`
+
+	/*
+	  Required: true
+	  In: path
+	*/
+	ID string
+	/*
+	  In: query
+	*/
+	Vlan *bool
+}
+
+// BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
+// for simple values it will use straight method calls
+func (o *DestroyParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+	var res []error
+	o.HTTPRequest = r
+
+	qs := runtime.Values(r.URL.Query())
+
+	rID, rhkID, _ := route.Params.GetOK("ID")
+	if err := o.bindID(rID, rhkID, route.Formats); err != nil {
+		res = append(res, err)
+	}
+
+	qVlan, qhkVlan, _ := qs.GetOK("vlan")
+	if err := o.bindVlan(qVlan, qhkVlan, route.Formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (o *DestroyParams) bindID(rawData []string, hasKey bool, formats strfmt.Registry) error {
+	var raw string
+	if len(rawData) > 0 {
+		raw = rawData[len(rawData)-1]
+	}
+
+	o.ID = raw
+
+	return nil
+}
+
+func (o *DestroyParams) bindVlan(rawData []string, hasKey bool, formats strfmt.Registry) error {
+	var raw string
+	if len(rawData) > 0 {
+		raw = rawData[len(rawData)-1]
+	}
+	if raw == "" { // empty values pass all other validations
+		return nil
+	}
+
+	value, err := swag.ConvertBool(raw)
+	if err != nil {
+		return errors.InvalidType("vlan", "query", "bool", raw)
+	}
+	o.Vlan = &value
+
+	return nil
+}
