# rest/restapi/operations/destroy_urlbuilder.go
@@ -1,0 +1,114 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the generate command
+
+import (
+	"errors"
+	"net/url"
+	golangswaggerpaths "path"
+	"strings"
+
+	"github.com/go-openapi/swag"
+)
+
+// DestroyURL generates an URL for the destroy operation
+type DestroyURL struct {
+	ID string
+
+	Vlan *bool
+
+	_basePath string
+	// avoid unkeyed usage
+	_ struct{}
+}
+
+// WithBasePath sets the base path for this url builder, only required when it's different from the
+// base path specified in the swagger spec.
+// When the value of the base path is an empty string
+func (o *DestroyURL) WithBasePath(bp string) *DestroyURL {
+	o.SetBasePath(bp)
+	return o
+}
+
+// SetBasePath sets the base path for this url builder, only required when it's different from the
+// base path specified in the swagger spec.
+// When the value of the base path is an empty string
+func (o *DestroyURL) SetBasePath(bp string) {
+	o._basePath = bp
+}
+
+// Build a url path and query string
+func (o *DestroyURL) Build() (*url.URL, error) {
+	var result url.URL
+
+	var _path = "/rest/v1/destroy/{ID}"
+
+	id := o.ID
+	if id != "" {
+		_path = strings.Replace(_path, "{ID}", id, -1)
+	} else {
+		return nil, errors.New("ID is required on DestroyURL")
+	}
+	_basePath := o._basePath
+	if _basePath == "" {
+		_basePath = "/"
+	}
+	result.Path = golangswaggerpaths.Join(_basePath, _path)
+
+	qs := make(url.Values)
+
+	var vlan string
+	if o.Vlan != nil {
+		vlan = swag.FormatBool(*o.Vlan)
+	}
+	if vlan != "" {
+		qs.Set("vlan", vlan)
+	}
+
+	result.RawQuery = qs.Encode()
+
+	return &result, nil
+}
+
+// Must is a helper function to panic when the url builder returns an error
+func (o *DestroyURL) Must(u *url.URL, err error) *url.URL {
+	if err != nil {
+		panic(err)
+	}
+	if u == nil {
+		panic("url can't be nil")
+	}
+	return u
+}
+
+// String returns the string representation of the path with query string
+func (o *DestroyURL) String() string {
+	return o.Must(o.Build()).String()
+}
+
+// BuildFull builds a full url with scheme, host, path and query string
+func (o *DestroyURL) BuildFull(scheme, host string) (*url.URL, error) {
+	if scheme == "" {
+		return nil, errors.New("scheme is required for a full url on DestroyURL")
+	}
+	if host == "" {
+		return nil, errors.New("host is required for a full url on DestroyURL")
+	}
+
+	base, err := o.Build()
+	if err != nil {
+		return nil, err
+	}
+
+	base.Scheme = scheme
+	base.Host = host
+	return base, nil
+}
+
+// StringFull returns the string representation of a complete url
+func (o *DestroyURL) StringFull(scheme, host string) string {
+	return o.Must(o.BuildFull(scheme, host)).String()
+}
